[gd_scene load_steps=2 format=3 uid="uid://cp427a5qkcq3o"]

[ext_resource type="Script" path="res://addons/kuikka_terrain_gen/ui/height_spec.gd" id="1_08fgh"]

[node name="HeightProfileSpec" type="MarginContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
script = ExtResource("1_08fgh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Height Profile"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HeightMin" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HeightMin"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Min"

[node name="Label2" type="Label" parent="VBoxContainer/HeightMin"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="HeightMax" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HeightMax"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Max"

[node name="Label2" type="Label" parent="VBoxContainer/HeightMax"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="HeightMean" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HeightMean"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Mean"

[node name="Label2" type="Label" parent="VBoxContainer/HeightMean"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="HeightMedian" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HeightMedian"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Median"

[node name="Label2" type="Label" parent="VBoxContainer/HeightMedian"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="HeightDeviation" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HeightDeviation"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Deviation"

[node name="Label2" type="Label" parent="VBoxContainer/HeightDeviation"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HeightKurtosis" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HeightKurtosis"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Kurtosis
"

[node name="Label2" type="Label" parent="VBoxContainer/HeightKurtosis"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="HeightSkewness" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HeightSkewness"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Skewness
"

[node name="Label2" type="Label" parent="VBoxContainer/HeightSkewness"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="HeightEntropy" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HeightEntropy"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Entropy"

[node name="Label2" type="Label" parent="VBoxContainer/HeightEntropy"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HeightRange" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HeightRange"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Display Range"

[node name="Label2" type="Label" parent="VBoxContainer/HeightRange"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
